--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "jest": "^30.0.5"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-switch": "^1.2.6",
     "multer": "^2.0.2"
   }
 }
